
Added -v option to obj2mesh to print out mesh statistics.

Rewrote bsdf2rad from ground up and made it a standard part of build.

Fixed bug in orientation of Reinhart/Tregenza sample generator in rfluxmtx.

Added ability to perform shadow-testing through unproxied BSDFs with strong
through (direct-direct) component.

Added {+|-}a options to genBSDF and bsdf2ttree for switching off reciprocity
averaging.

Added bias to see through BTDFs with a strong "through" component
rather than scattering view rays.  This is in lieu of peak extraction,
which looked to be too difficult from an implementation standpoint.

Added bsdfview tool analogous to objview but for BSDF files (XML and SIR),
which calls bsdf2rad then rad with a few useful default views.

=========================
Version 5.2

Created psketch program to apply non-photorealistic rendering to selected
objects, identified by modifier name(s).

Added '*' and '/' operations to rmtxop for element-wise multiplication and
division of same-sized matrices.

Changed falsecolor so "-s" option is adjusted to match legend if one.

Falsecolor legend changes and improvements by David G-M and Stephen W.

Fixed bug in peak extraction code that generated
"Bad call to SDqueryTreProjSA" error, reported by Lars Grobe.

Increased maximum luminance to 10^7 in pcond to fix issue noticed
by Axel Jacobs where veiling glare not added for the sun under
some conditions.

Increased maximum number of open files in rcontrib to the system upper
limit of 2048 rather than the default 512 under Windows.

Added top-level resources directory with files from Rob Guglielmetti.

Improved accuracy for peaky BSDFs and small light sources.

Fixed issue with pmapdump noted by Axel Jacobs.

Improved accuracy of bsdf2ttree when converting scattering interpolation
representatons with strong peaks.

Tweaked peak-extraction code to work more reliably.

Georg Mischler updated SCons build system.

Rob Guglielmetti and Alex Swindler updated CMake build system.